--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.72.1",
     "next": "14.2.0",
+    "openai": "^4.20.0",
     "react": "^18",
-    "react-dom": "^18",
-    "openai": "^4.20.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10",
     "postcss": "^8",
-    "autoprefixer": "^10"
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5"
   }
 }
